// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gardener-dashboard rolebinding should render the template with default values 1`] = `
Object {
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "RoleBinding",
  "metadata": Object {
    "labels": Object {
      "app": "gardener-dashboard",
      "chart": "application-0.1.0",
      "heritage": "Helm",
      "release": "application",
      "role": "dashboard",
    },
    "name": "gardener.cloud:system:dashboard-github-webhook",
    "namespace": "garden",
  },
  "roleRef": Object {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "Role",
    "name": "gardener.cloud:system:dashboard-github-webhook",
  },
  "subjects": Array [
    Object {
      "kind": "ServiceAccount",
      "name": "gardener-dashboard",
      "namespace": "garden",
    },
  ],
}
`;

exports[`gardener-dashboard rolebinding virtual garden should render the template 1`] = `
Object {
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "RoleBinding",
  "metadata": Object {
    "labels": Object {
      "app": "gardener-dashboard",
      "chart": "application-0.1.0",
      "heritage": "Helm",
      "release": "application",
      "role": "dashboard",
    },
    "name": "gardener.cloud:system:dashboard-github-webhook",
    "namespace": "garden",
  },
  "roleRef": Object {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "Role",
    "name": "gardener.cloud:system:dashboard-github-webhook",
  },
  "subjects": Array [
    Object {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "User",
      "name": "runtime-cluster:system:serviceaccount:garden:gardener-dashboard",
    },
  ],
}
`;
